sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:4: error: not found: value gCrepeF
  for(x<-0 to (N-1)){gCrepeF(N-x)}} 
                     ^